# reference_data_store

./: .gitignore  README.md  pyproject.toml
esco_taxonomy/: README.md  build.py
esco_taxonomy/inputs/: esco_occupation_index.json  occupations_en.csv  occupations_en.embeddings-256.npy
fields_of_study/: README.md  build.py
fields_of_study/outputs/: fields_of_study.json
locations/: README.md  fetch.py
locations/outputs/: countries.json  regions.json  subregions.json
qualifications/: README.md  build.py
qualifications/outputs/: qualifications.json
sectors/: README.md  fetch.py
sectors/outputs/: industries.json  sectors.json
tools/: compress.py  decompress.py
universities/: README.md  fetch.py
universities/outputs/: universities.json
